fix: spacing for  movie results when searching

--- a/src/components/Movie.css
+++ b/src/components/Movie.css
@@ -3,7 +3,7 @@
   height: auto;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   flex-wrap: wrap;
   padding: 50px;
   background-color: #141414;
